refactor: rename gpss to gps_devices / gpsDevices
