# backend/docs/swagger.yaml
@@ -146,7 +146,7 @@ info:
   title: Beacon API
   version: "1.0"
 paths:
-  /gps:
+  /gps-devices:
     get:
       produces:
       - application/json
@@ -182,6 +182,67 @@ paths:
           schema:
             type: string
       summary: Register a GPS device
+      tags:
+      - gps
+  /gps-devices/{id}:
+    delete:
+      parameters:
+      - description: GPS ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "204":
+          description: No Content
+        "404":
+          description: Not Found
+          schema:
+            type: string
+      summary: Delete a GPS device
+      tags:
+      - gps
+    get:
+      parameters:
+      - description: GPS ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gps.GpsResponse'
+        "404":
+          description: Not Found
+          schema:
+            type: string
+      summary: Get a GPS device
+      tags:
+      - gps
+  /gps-devices/{id}/history:
+    get:
+      parameters:
+      - description: GPS ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gps.GpsHistoryResponse'
+        "404":
+          description: Not Found
+          schema:
+            type: string
+      summary: Get a GpsHistory ...
       tags:
       - gps
   /gps-points:
@@ -222,67 +283,6 @@ paths:
       summary: Record a GPS point
       tags:
       - gps-points
-  /gps/{id}:
-    delete:
-      parameters:
-      - description: GPS ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      responses:
-        "204":
-          description: No Content
-        "404":
-          description: Not Found
-          schema:
-            type: string
-      summary: Delete a GPS device
-      tags:
-      - gps
-    get:
-      parameters:
-      - description: GPS ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/gps.GpsResponse'
-        "404":
-          description: Not Found
-          schema:
-            type: string
-      summary: Get a GPS device
-      tags:
-      - gps
-  /gps/{id}/history:
-    get:
-      parameters:
-      - description: GPS ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/gps.GpsHistoryResponse'
-        "404":
-          description: Not Found
-          schema:
-            type: string
-      summary: Get a GpsHistory ...
-      tags:
-      - gps
   /vehicles:
     get:
       produces:
